--- a/hospit-ai/package.json
+++ b/hospit-ai/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "next": "14.0.3",
