--- a/hosp-intelligent/package.json
+++ b/hosp-intelligent/package.json
@@ -12,19 +12,19 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
-    "next": "14.0.3",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.79",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
